After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 517712 - Custom colour picker widgets in Resources page respond unpredictably to many signals
Custom colour picker widgets in Resources page respond unpredictably to many ...
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: resources
2.21.x
Other Linux
: Normal normal
: ---
Assigned To: System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2008-02-20 17:51 UTC by Pedro Villavicencio
Modified: 2011-11-11 10:03 UTC
See Also:
GNOME target: ---
GNOME version: 2.21/2.22


Attachments
Proposed patch (3.96 KB, patch)
2011-11-04 23:18 UTC, Robert Roth
none Details | Review
Only display change color dialog on clicked instead of button-release (4.00 KB, patch)
2011-11-05 07:07 UTC, Chris Kühl
committed Details | Review

Description Pedro Villavicencio 2008-02-20 17:51:54 UTC
This report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/gnome-system-monitor/+bug/193729

"The custom colour picker widgets in the Resources section of the System Monitor, look great. However they are currently opening the colour picker dialog when:

-Drag and drop of colour, after receiving widget has received the colour. (drag-end?)
-Right click
-Middle click

Instead, the colour picker dialog should only open when the user left clicks on it.
"

Thanks,
Comment 1 Pavel Šefránek 2008-03-12 20:25:27 UTC
Don't know if it is actually a bug - many other apps allow you to click the item with any mouse button.
Comment 2 Dylan McCall 2008-03-13 02:32:52 UTC
This is much more than just clicking with other mouse buttons, but also (it seems) dropping colours. In retrospect, I could be mistaken with where exactly the problem is for that one. (Maybe mouse release being misinterpreted?)
Left clicking should be the only interaction responded to by a big colour picker popup, since that is the only one which generates the "clicked" signal. For that matter, not even a left click should (necessarily) cause that to happen.

Can you give an example of an application whose colour pickers open when clicked with other buttons?
Comment 3 Dylan McCall 2008-03-15 04:21:22 UTC
Correction: This occurs on mouse release for any mouse button. (Regardless even of whether that button is over the widget any more or not). It does not necessarily respond to drag-end, though it does seem like it.
Comment 4 Robert Roth 2011-11-04 23:18:46 UTC
Created attachment 200723 [details] [review]
Proposed patch

Proposing a patch to only display the color selection dialog on left-click, not on every button-release.
Comment 5 Chris Kühl 2011-11-05 07:07:48 UTC
The following fix has been pushed:
e2440e1 Only display change color dialog on clicked instead of button-release
Comment 6 Chris Kühl 2011-11-05 07:07:53 UTC
Created attachment 200742 [details] [review]
Only display change color dialog on clicked instead of button-release