Only display change color dialog on clicked instead of button-release

https://bugzilla.gnome.org/show_bug.cgi?id=517712